<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginMQTT">

    <EditText
        android:id="@+id/hostport"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="92dp"
        android:ems="10"
        android:hint="@string/example_tcp_m12_cloudmqtt_com_11111"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="211dp"
        tools:layout_editor_absoluteY="50dp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="166dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="21dp"
        android:ems="10"
        android:hint="@string/example_rnghsoam"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="211dp"
        tools:layout_editor_absoluteY="237dp" />

    <EditText
        android:id="@+id/passtext"
        android:layout_width="127dp"
        android:layout_height="39dp"
        android:layout_alignStart="@+id/username"
        android:layout_alignTop="@+id/textView6"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:visibility="visible"
        tools:layout_editor_absoluteX="211dp"
        tools:layout_editor_absoluteY="345dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="229dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:text="@string/mqtt_host_port_number"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="50dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="98dp"
        android:layout_height="41dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="183dp"
        android:text="@string/username"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="236dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="106dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="197dp"
        android:text="@string/password"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="335dp" />

    <Button
        android:id="@+id/Next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="44dp"
        android:layout_marginStart="134dp"
        android:text="@string/next" />
</RelativeLayout>